--- a/style/styles.css
+++ b/style/styles.css
@@ -710,8 +710,8 @@ iframe {
     width: 100%;
     height: 60%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    align-items: flex-start;
     justify-content: space-between;
 }
 
@@ -878,14 +878,13 @@ footer.right-container .socials {
     }
 
     #skills .left-container {
-        align-items: flex-start;
-        width: 30%;
-        height: 60%;
+        width: 45%;
+        height: 50%;
     }
 
     #skills .right-container {
-        width: 60%;
-        height: 60%;
+        width: 50%;
+        height: 50%;
     }
     /* Footer */
     footer .left-container,
