--- a/portfolio/src/styles/contact.css
+++ b/portfolio/src/styles/contact.css
@@ -25,7 +25,7 @@
 }
 
 .letter {
-    font-size: clamp(5rem, 15vh, 10rem);
+    font-size: var(--h1-size);
     font-weight: bold;
     flex: 1;
     text-align: center;
