--- a/portfolio/src/styles/contact.css
+++ b/portfolio/src/styles/contact.css
@@ -42,7 +42,7 @@ footer {
     justify-content: space-between;
     width: 100%;
     height: 40%;
-    padding: min(2rem, 4%);
+    padding: var(--d-gap);
     gap: var(--d-gap);
     max-width: 2560px;
     background-color: var(--color-primary);
@@ -52,8 +52,8 @@ footer {
 
 .f-cont {
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
+    gap: var(--d-gap);
 }
 
 .email {
@@ -71,7 +71,12 @@ footer {
         height: 35%;
     }
 
+    .f-cont {
+        gap: none;
+    }
+
     .f-cont:nth-child(2) {
+        justify-content: space-between;
         flex-direction: row;
     }
 }
