--- a/portfolio/src/styles/home.css
+++ b/portfolio/src/styles/home.css
@@ -5,7 +5,7 @@
 }
 
 .home .container {
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-end;
     align-items: flex-end;
 }
@@ -13,7 +13,7 @@
 .hero {
     display: flex;
     flex-direction: column;
-    padding: min(2em, 4%) min(2em, 4%) min(4em, 8%);
+    padding: var(--d-gap);
     justify-content: space-between;
     background: var(--blur-1);
     -webkit-backdrop-filter: blur(5px);
@@ -21,69 +21,73 @@
     border: 1px solid var(--color-secondary);
     border-bottom: none;
     width: 100%;
-    height: 95%;
+    height: 50%;
     text-align: left;
 }
 
 .hero-box {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 70%;
+    gap: var(--d-gap);
+    height: fit-content;
 }
 
 .hero h1 {
-    letter-spacing: var(--ls-1);
     line-height: 0.8;
-    overflow: hidden;
-    white-space: nowrap;
-    animation: typing 3s steps(6) forwards;
 }
-
-.hero h5 {
-    overflow: hidden;
-    white-space: nowrap;
-    animation: typing 3s steps(21) forwards;
-}
-
-
 
 .home .cta {
     display: flex;
-    justify-content: space-between;
-    height: fit-content;
+    flex-direction: column;
+    justify-content: center;
+    gap: var(--d-gap);
 }
 
 .cta a.button {
     font-size: var(--p-size);
 }
 
-@media(min-width: 810px) {
+@media(min-width: 768px) {
     .hero {
-        width: 85%;
+        width: 90%;
+        height: 55%;
     }
 }
 
-@media(min-width:980px) {
+@media(min-width:900px) {
     .hero {
-        width: 75%;
-        height: 90%;
+        width: 80%;
+        height: 65%;
+    }
+
+    .home .cta {
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 0;
     }
 }
 
-@media(min-width: 1200px) {
+@media(min-width:1024px) {
+    .hero {
+        width: 70%;
+        height: 75%;
+    }
+
     .home .container {
         flex-direction: row;
     }
+}
+
+
+@media(min-width: 1280px) {
 
     .hero {
-        width: 50%;
+        width: 48%;
     }
 }
 
 @media(min-width: 2000px) {
     .hero {
-        width: 55%;
-        height: 70%;
+        width: 35%;
     }
 }
