--- a/portfolio/src/styles/about.css
+++ b/portfolio/src/styles/about.css
@@ -8,6 +8,7 @@
 .about .container {
     padding: var(--pad-1);
     justify-content: space-between;
+    gap: var(--pad-1);
 }
 
 /* Top Section */
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: clamp(0.5rem, 1vh, 2.5rem);
+    gap: var(--gap-2);
     width: 100%;
 }
 
@@ -31,7 +32,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: var(--d-gap);
+    gap: var(--pad-1);
 }
 
 .about .bento-container:nth-child(1) {
@@ -75,17 +76,8 @@
 
 /* == Responsive Settings == */
 @media(min-width: 768px) {
-    .about {
-        align-items: center;
-        justify-content: center;
-    }
-
     .about .container {
-        padding: var(--pad-1);
-    }
-
-    .about-bot {
-        flex-direction: row;
+        padding: var(--pad-1) var(--pad-2);
     }
 
     .about-bot .bento-container {
@@ -93,20 +85,14 @@
     }
 }
 
-@media(min-width: 1200px) {
-    .about .container {
-        width: 100%;
-        padding: var(--pad-2);
-        margin-left: 0;
-    }
-
-    .radial-chart {
-        max-height: 400px;
+@media(min-width:900px) {
+    .about-bot {
+        flex-direction: row;
     }
 }
 
-@media(min-width:2000px) {
-    .radial-chart {
-        max-height: 500px;
+@media(min-width: 1280px) {
+    .about .container {
+        padding: var(--pad-2) var(--pad-4);
     }
 }
