--- a/portfolio/src/styles/components/headerMenu.css
+++ b/portfolio/src/styles/components/headerMenu.css
@@ -5,7 +5,7 @@ header {
     left: 0;
     bottom: 0;
     height: 100vh;
-    width: min(10%, 76px);
+    width: min(10%, 80px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -73,7 +73,7 @@ header {
 .sb.section-name a.toggle {
     writing-mode: vertical-lr;
     transform: rotate(180deg);
-    font-size: clamp(2rem, 2.5vh, 4rem);
+    font-size: var(--h3-size);
     text-transform: uppercase;
     letter-spacing: var(--ls-1);
 }
@@ -140,9 +140,9 @@ menu {
     gap: 5vh;
     top: 0;
     left: -100%;
-    width: calc(100vw - min(7%, 76px));
+    width: calc(100% - min(10%, 100px));
     height: 100vh;
-    padding: var(--pad-1);
+    padding: var(--pad-2);
     background: var(--blur-1);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
