--- a/portfolio/src/styles/contact.css
+++ b/portfolio/src/styles/contact.css
@@ -39,11 +39,10 @@
 footer {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 100%;
-    height: 40%;
-    padding: var(--d-gap);
-    gap: var(--d-gap);
+    height: fit-content;
+    padding: min(2.5%, 20px);
+    gap: var(--gap-2);
     max-width: 2560px;
     background-color: var(--color-primary);
     border: 1px solid var(--color-secondary);
@@ -52,39 +51,19 @@ footer {
 
 .f-cont {
     display: flex;
-    flex-direction: column;
-    gap: var(--d-gap);
+    justify-content: space-between;
+    flex-direction: row;
+    padding-top: var(--pad-1);
 }
 
 .email {
-    font-size: var(--h6-size);
+    font-size: var(--h4-size);
     width: fit-content;
 }
 
 .f-cont .socials,
 .f-cont .copyright {
     width: fit-content;
-}
-
-@media(min-width:810px) {
-    footer {
-        height: 35%;
-    }
-
-    .f-cont {
-        gap: none;
-    }
-
-    .f-cont:nth-child(2) {
-        justify-content: space-between;
-        flex-direction: row;
-    }
-}
-
-@media(min-width: 1200px) {
-    .contact .container {
-        margin-left: 0;
-    }
 }
 
 @keyframes stretch {
