--- a/portfolio/src/styles/home.css
+++ b/portfolio/src/styles/home.css
@@ -13,7 +13,7 @@
 .hero {
     display: flex;
     flex-direction: column;
-    padding: var(--d-gap);
+    padding: var(--pad-1);
     justify-content: space-between;
     background: var(--blur-1);
     -webkit-backdrop-filter: blur(5px);
@@ -28,23 +28,20 @@
 .hero-box {
     display: flex;
     flex-direction: column;
-    gap: var(--d-gap);
+    gap: var(--gap-1);
     height: fit-content;
 }
 
 .hero h1 {
     line-height: 0.8;
+    letter-spacing: var(--ls-3);
 }
 
 .home .cta {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: var(--d-gap);
-}
-
-.cta a.button {
-    font-size: var(--p-size);
+    gap: var(--gap-1);
 }
 
 @media(min-width: 768px) {
@@ -77,7 +74,6 @@
         flex-direction: row;
     }
 }
-
 
 @media(min-width: 1280px) {
 
