--- a/portfolio/src/styles/projects.css
+++ b/portfolio/src/styles/projects.css
@@ -64,11 +64,11 @@
   height: auto;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
+  transition: transform 0.3s ease-in-out;
 }
 
 .project:hover img {
   transform: scale(0.9) translateY(10px);
-  transition: all 0.3s ease-in-out;
   border-radius: 10px;
 }
 
