--- a/portfolio/src/styles/components/preloader.css
+++ b/portfolio/src/styles/components/preloader.css
@@ -1,4 +1,3 @@
-/* ======= Preloader ======= */
 .preloader {
   position: fixed;
   top: 0;
@@ -7,12 +6,11 @@
   height: 100vh;
   background: var(--color-primary);
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding: 1vh 2vw;
+  justify-content: center;
+  align-items: center;
   z-index: 9999;
+  transition: transform 0.8s cubic-bezier(0.7, 0, 0.3, 1), visibility 0.8s;
   transform: translateY(0);
-  transition: all 0.8s cubic-bezier(0.7, 0, 0.3, 1);
 }
 
 .preloader.loaded {
@@ -21,47 +19,35 @@
   pointer-events: none;
 }
 
-.counter {
-  font-size: clamp(3rem, 10vw, 8rem);
+.loading-text {
+  display: flex;
+  font-size: var(--h2-size);
   font-weight: bold;
-  color: var(--color-tertiary);
-  transition: color 0.5s ease, transform 0.3s ease, opacity 0.5s ease;
-  animation: pulse 2s infinite;
+  color: var(--color-quaternary);
+}
+
+.loading-text span {
+  display: inline-block;
+  letter-spacing: var(--ls-1);
   opacity: 1;
+  animation: widenFade 1s ease forwards;
 }
 
-.counter.complete {
-  color: var(--color-accent);
-  animation: scaleUpAndFade 0.8s forwards;
-}
-
-@keyframes scaleUpAndFade {
+@keyframes widenFade {
   0% {
-    transform: scale(1);
+    transform: scaleX(1);
+    color: var(--color-quaternary);
     opacity: 1;
   }
 
   50% {
-    transform: scale(1.2);
+    transform: scaleX(1.5);
     opacity: 1;
   }
 
   100% {
-    transform: scale(1);
+    transform: scaleX(1);
+    color: var(--color-accent);
     opacity: 0;
-  }
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.05);
-  }
-
-  100% {
-    transform: scale(1);
   }
 }
